<?xml version="1.0"?>
<package format="2">
    <name>cortex</name>
    <version>1.0.0</version>
    <description>The CORTEX framework for robotics.</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="Rob.Royce@jpl.nasa.gov">Rob Royce</maintainer>
    <license>Apache 2.0</license>
    <author email="Rob.Royce@jpl.nasa.gov">Rob Royce</author>

    <buildtool_depend>catkin</buildtool_depend>
</package>
